--- a/Solution/WebClient/Views/Shared/_LayoutMain.cshtml
+++ b/Solution/WebClient/Views/Shared/_LayoutMain.cshtml
@@ -56,7 +56,7 @@
                     <div class="page-title">
                         <div class="row">
                             <div class="col-6">
-                                <h4>HRIS</h4>
+                                @* <h4>HRIS</h4> *@
                             </div>
                             <div class="col-6">
                                 <ol class="breadcrumb">
