--- a/Solution/WebClient/Views/Auth/Login.cshtml
+++ b/Solution/WebClient/Views/Auth/Login.cshtml
@@ -36,10 +36,9 @@
         </a>
     </div>
     <div class="login-main">
-        <div class="row">
-            @Html.Partial("_Alert")
-        </div>
-        
+
+        @await Html.PartialAsync("_Alert")
+
         <form class="theme-form" method="post" asp-controller="Auth" asp-action="Login" needs-validation asp-route-returnurl="@ViewData["returnUrl"]">
             <h4>Sign in to account</h4>
             <p>Enter your Identity & password to login</p>
