--- a/Solution/WebClient/Views/Auth/Register.cshtml
+++ b/Solution/WebClient/Views/Auth/Register.cshtml
@@ -41,6 +41,7 @@
     </div>
     <div class="login-main">
         <form class="theme-form" method="post" asp-controller="Auth" asp-action="Register" needs-validation >
+            @await Html.PartialAsync("_Alert")
             <h4>Register your account</h4>
             <p>Enter your Id Number & password to login</p>
 
