--- a/Solution/WebClient/Views/Auth/OtpVerify.cshtml
+++ b/Solution/WebClient/Views/Auth/OtpVerify.cshtml
@@ -51,6 +51,7 @@
 
             @Html.HiddenFor(m => m.IdNumber)
             @Html.HiddenFor(m => m.Requester)
+            @Html.HiddenFor(m => m.CountDown)
 
             <table class="table no-border">
                 <tr>
