add sonar fixing

--- a/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
+++ b/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
@@ -22,7 +22,7 @@
         <div class="header-logo-wrapper col-auto p-0">
             <div class="logo-wrapper">
                 <a href="#">
-                    <img class="img-fluid for-light" src="https://www.mitrasolutech.com/mitrasolutech.com/payroll/image/logo.png">
+                    <img class="img-fluid for-light" src="https://www.mitrasolutech.com/mitrasolutech.com/payroll/image/logo.png" alt="logo">
                     @* <h4>HRIS</h4> *@
                 </a>
                 
