--- a/Solution/WebClient/Views/Shared/_TemplateNavigation.cshtml
+++ b/Solution/WebClient/Views/Shared/_TemplateNavigation.cshtml
@@ -4,7 +4,7 @@
         <div class="logo-wrapper">
             <a href="#">
                 @* <img class="img-fluid for-light" src="~/assets/images/logo/logo.png" alt=""><img class="img-fluid for-dark" src="~/assets/images/logo/logo_dark.png" alt=""> *@
-                <img class="img-fluid for-light" src="https://www.mitrasolutech.com/mitrasolutech.com/payroll/image/logo.png" style="max-width: 30px;">
+                <img class="img-fluid for-light" src="https://www.mitrasolutech.com/mitrasolutech.com/payroll/image/logo.png" style="max-width: 30px;" alt="">
             </a>
             <div class="back-btn"><i class="fa fa-angle-left"></i></div>
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
