--- a/Solution/WebClient/Views/Auth/OtpVerify.cshtml
+++ b/Solution/WebClient/Views/Auth/OtpVerify.cshtml
@@ -53,15 +53,20 @@
             @Html.HiddenFor(m => m.Requester)
             @Html.HiddenFor(m => m.CountDown)
 
-            <table class="table no-border">
-                <tr>
-                    <td>Id Number</td>
-                    <td>@Model.IdNumber</td>
-                </tr>
-                <tr>
-                    <td>Phone Number</td>
-                    <td>@Model.Requester</td>
-                </tr>
+            <table class="table no-border" aria-label="">
+                <thead>
+                    <tr><th></th><th></th></tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Id Number</td>
+                        <td>@Model.IdNumber</td>
+                    </tr>
+                    <tr>
+                        <td>Phone Number</td>
+                        <td>@Model.Requester</td>
+                    </tr>
+                </tbody>
             </table>
             <div class="form-group">
                 <label class="col-form-label">OTP Token</label>
