module grand access, navigation nested, change template

--- a/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
+++ b/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
@@ -59,9 +59,8 @@
                                 Welcome, @User.Identity?.Name
                             </span>
                             <p class="mb-0">
-                                @* @AuthRazorExtension.GetUserRoleName(this) *@
-                                Dummy Role
-
+                                @AuthRazorExtension.GetUserRoleName(this)
+                                
                                 <i class="middle fa fa-angle-down"></i>
                             </p>
                         </div>
