sample for enum and data table button

--- a/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
+++ b/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
@@ -126,10 +126,10 @@
                         <li class="sidebar-list">
                             <a class="sidebar-link sidebar-title" href="#">
                                 <i class="fa fa-sitemap"></i>
-                                <span>Grand Access</span>
+                                <span>Grant Access</span>
                             </a>
                             <ul class="sidebar-submenu">
-                                <li><a href="@Url.Action("Index","GrandAccess")">List</a></li>
+                                <li><a href="@Url.Action("Index","GrantAccess")">List</a></li>
 
                             </ul>
                         </li>
