bugs fixing for handle exception and create calendar workday

--- a/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
+++ b/Solution/WebClient/Views/Shared/Components/Navigation/Default.cshtml
@@ -39,7 +39,7 @@
                                 <span>Employee</span>
                             </a>
                             <ul class="sidebar-submenu">
-                                <li><a href="@Url.Action("List","Employee")">List</a></li>
+                                <li><a href="@Url.Action("List","Employee")">Index</a></li>
 
                             </ul>
                         </li>
@@ -53,7 +53,7 @@
                                 <span>Work Day</span>
                             </a>
                             <ul class="sidebar-submenu">
-                                <li><a href="@Url.Action("List","Employee")">List</a></li>
+                                <li><a href="@Url.Action("Calendar","WorkDay")">Calendar</a></li>
                             </ul>
                         </li>
                     }
@@ -64,7 +64,7 @@
                             <span>Role</span>
                         </a>
                         <ul class="sidebar-submenu">
-                            <li><a href="#">List</a></li>
+                            <li><a href="#">Index</a></li>
                         </ul>
                     </li>
 
@@ -111,7 +111,7 @@
                             <span>Report 1</span>
                         </a>
                         <ul class="sidebar-submenu">
-                            <li><a href="#">List</a></li>
+                            <li><a href="#">Index</a></li>
                         </ul>
                     </li>
 
@@ -129,7 +129,7 @@
                                 <span>Grant Access</span>
                             </a>
                             <ul class="sidebar-submenu">
-                                <li><a href="@Url.Action("Index","GrantAccess")">List</a></li>
+                                <li><a href="@Url.Action("Index","GrantAccess")">Index</a></li>
 
                             </ul>
                         </li>
