--- a/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
+++ b/Solution/WebClient/Views/Shared/_TemplateHeader.cshtml
@@ -59,7 +59,7 @@
                                 Welcome, @User.Identity?.Name
                             </span>
                             <p class="mb-0">
-                                @AuthRazorExtension.GetUserRoleName(this)
+                                @AuthRazorExtensions.GetUserRoleName(this)
                                 
                                 <i class="middle fa fa-angle-down"></i>
                             </p>
